<resources>
    <string name="app_name">Garage Mobile</string>
    <string name="title_garage">Garage Mobile</string>
    <string name="title_details">Vehicle Details</string>
    <string name="title_edit_details">Edit Vehicle</string>

    <string name="set_image">Change Image</string>
    <string name="title_edit_vehicle_info">Edit Vehicle Info</string>
    <string name="title_delete_vehicle">Delete Vehicle</string>

    <string name="unnamed_component">Unnamed Component</string>


    <!-- Confirm Delete AlertDialog strings -->
    <string name="confirm_vehicle_delete_message">Are you sure you want to delete this vehicle?</string>
    <string name="confirm_delete_choice">Delete</string>
    <string name="cancel_delete_choice">Cancel</string>


    <!-- Edit vehicle hint strings -->
    <string name="hint_name">Component Name</string>
    <string name="hint_year">Year</string>
    <string name="hint_make">Make</string>
    <string name="hint_model">Model</string>
    <string name="hint_trim">Trim package</string>
    <string name="hint_body">Body type</string>
    <string name="hint_doors">Doors</string>
    <string name="hint_exterior_color">Exterior color</string>
    <string name="hint_drive_type">Drive type</string>

    <!-- Doors spinner items -->
    <string name="doors_2">2-Door</string>
    <string name="doors_3">3-Door</string>
    <string name="doors_4">4-Door</string>
    <string name="doors_5">5-Door</string>
    <string name="doors_6">6-Door</string>

    <!-- Drive type spinner items -->
    <string name="drive_fwd">Front-wheel drive</string>
    <string name="drive_rwd">Rear-wheel drive</string>
    <string name="drive_awd">All-wheel drive</string>
    <string name="drive_4wd">Four-wheel drive</string>
    <string name="drive_fwd_short">FWD</string>
    <string name="drive_rwd_short">RWD</string>
    <string name="drive_awd_short">AWD</string>
    <string name="drive_4wd_short">4WD</string>

    <!-- Edit vehicle other strings -->
    <string name="add_field_button">Add Field</string>
    <string name="add_component_button">Add Component</string>
    <string name="field_name">Field name</string>
    <string name="field_value">Field value</string>
    <string name="remove_field_button">Remove field</string>
    <string name="save">Save</string>
    <string name="custom_fields">Custom Fields</string>
    <string name="component_name">Component Name</string>
    <string name="component_icon">Component Icon</string>

    <string name="field_name_placeholder">%1$s%2$s</string>

    <!-- Component names -->
    <string name="engine_title">Engine</string>
    <string name="transmission_title">Transmission</string>
    <string name="wheels_title">Wheels</string>
    <string name="tires_title">Tires</string>
    <string name="other_title">Other</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_icon_description">Add Icon</string>

</resources>
