<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/fieldNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginEnd="8dp"
        android:ems="7"
        android:hint="@string/field_name"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/fieldValueEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fieldValueEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="12"
        android:hint="@string/field_value"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fieldNameEditText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addFieldButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/add_field_button"
        android:drawableStart="@drawable/ic_add_circle_outline_black_24dp"
        android:drawablePadding="4dp"
        android:text="@string/add_field_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldNameEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>